add_subdirectory(Sedov)
add_subdirectory(Shu-Osher)
add_subdirectory(Sod)
add_subdirectory(EB-C3)
add_subdirectory(EB-C4-5)
add_subdirectory(EB-C9)
add_subdirectory(EB-C10)
add_subdirectory(EB-C11)
add_subdirectory(EB-C12)
if(PELEC_DIM GREATER 2)
  add_subdirectory(EB-C7)
  add_subdirectory(EB-C8)
  add_subdirectory(EB-BluffBody)
  add_subdirectory(EB-Plane)
endif()
